--- a/literacy/exchange.html
+++ b/literacy/exchange.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Заявки на биржу, как заключаются и исполняются сделки, основные периоды и режимы торгов" />        <meta name="keywords" content="финансовая грамотность, фондовый рынок, биржа, торговля, сделки, рыночные заявки, лимитные заявки, расчёт по сделкам, аукцион открытия, аукцион закрытия, режимы торгов, T+1, T+2, стакан заявок" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/literacy/exchange" /></head>
+<meta property="og:url" content="https://onfin.github.io/literacy/exchange" />
+</head>
 
 <body>
     <header>
@@ -203,7 +204,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
