--- a/literacy/fund_selection/index.html
+++ b/literacy/fund_selection/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Как правильно рассчитать и сравнить основные характеристики индексных фондов. Почему нельзя опираться на цифры из отчётности фондов. Какие бывают типы фондов, чем различаются между собой различные способы репликации и каковы их риски. Прочие факторы, влияющие на выбор фондов." />        <meta name="keywords" content="финансовая грамотность, инвестиционные фонды, индексные фонды, ETF, БПИФ, комиссии, TER, ошибка отслеживания, tracking error, скорость отставания, tracking difference" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" /></head>
+<meta property="og:url" content="https://onfin.github.io/literacy/fund_selection" />
+</head>
 
 <body>
     <header>
@@ -377,7 +378,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
