--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." />        <meta name="keywords" content="осознанность, осознанное потребление, смысл денег, пассивный доход, риск, сбережения, инвестиции, личный финансовый план, учёт расходов, бюджет, фондовый рынок, облигации, акции, брокеры" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/literacy/howto" /></head>
+<meta property="og:url" content="https://onfin.github.io/literacy/howto" />
+</head>
 
 <body>
     <header>
@@ -347,7 +348,7 @@ calcRetirement();
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
