--- a/notes/factors/index.html
+++ b/notes/factors/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало." />        <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, диверсификация, ребалансировка, портфель, риск, доходность, инвестиционные факторы, Фама, Френч, CAPM" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/factors" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/factors" />
+</head>
 
 <body>
     <header>
@@ -59,6 +60,9 @@
 </ul>
 <li><a href="/notes/factors#_12">Второй тур</a></li>
 <li><a href="/notes/factors#_13">Выводы</a></li>
+<ul>
+<li><a href="/notes/factors#_14">Ссылки по теме</a></li>
+</ul>
 </ul></div>
 <section id="_2">
 <h2><a href="/notes/factors#_2">Историческая справка: CAPM, альфа, бета, и факторы</a></h2>
@@ -751,6 +755,33 @@
 <li>Собирать руками портфель из фондов на отдельные факторы — аналогичная история.</li>
 <li>Дешёвое плечо <em>значительно</em> лучше значимого перевеса в SmallCaps.</li>
 </ol>
+<section id="_14">
+<h3><a href="/notes/factors#_14">Ссылки по теме</a></h3>
+<div class="meta">
+</div>
+<p><a href="https://www.cambridge.org/core/elements/causal-factor-investing/9AFE270D7099B787B8FD4F4CBADE0C6E">Causal Factor Investing</a></p>
+<p>Virtually all journal articles in the factor investing literature deny or ignore the
+causal content of factor models. Authors do not identify the causal graph
+consistent with the observed sample, they justify their chosen model specifica-
+tion in associational terms (e.g., optimizing the coefficient of determination),
+and they rarely theorize a falsifiable causal mechanism able to explain their
+findings. Absent a causal theory, it is nearly impossible to falsify their claims
+thoroughly (Section 3). It could take decades to collect enough out-of-sample
+evidence to determine that the association is false, and in-sample evidence is
+highly susceptible to p-hacking and backtest overfitting. The outcome from
+a backtest or a factor model is yet another associational claim, prone to the same
+misunderstandings and spurious claims discussed in Sections 5 and 6. For
+example, the factor models and backtests of strategies based on FF93, FF15,
+and C97 do not prove that holding value stocks causes a portfolio to outperform
+the market, because that causal claim can only be tested by the methods
+described in Section 4. Even if it were true that holding value stocks causes
+a portfolio to outperform the market, neither a factor model nor a backtest tells
+us why.
+Consider the large losses experienced by value funds between late 2017 and
+early 2022. Investors never received a straight answer to the question “why did
+value funds perform so poorly?” The reason is, in absence of a causal theory,
+nobody knows why value funds should have performed well in the first place.</p>
+</section>
 </section>
 </section>
             </div>
@@ -785,7 +816,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
