--- a/notes/gdp_mic.html
+++ b/notes/gdp_mic.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Военные расходы — не решение, а проблема." />        <meta name="keywords" content="экономика, макроэкономика, деньги, импорт, экспорт, ВВП, ВПК, военные расходы" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/gdp_mic" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/gdp_mic" />
+</head>
 
 <body>
     <header>
@@ -43,6 +44,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/dfi'>Прямые иностранные инвестиции — зачем?</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Прямые иностранные инвестиции — зачем?</span>
+        <span class='description'>(а) Заимствование передовых производственных и управленческих практик, (б) вовлечение в систему международных торговых связей, (в) стимулирование конкуренции, (г) сигнал отечественным инвесторам, (д) укрепление дипломатических связей, (е) диверсификация экономики и структуры трансграничных платежей.</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Приходится сталкиваться с утверждением, что война, военное производство, военные расходы — это вполне эффективный способ «перезапуска» экономики, находящейся в кризисе.</p>
 <p>Действительно, если в экономике есть незадействованные производственные мощности, то война может их загрузить, а выросшие компенсации военным тоже увеличивают совокупный спрос ⇒ растёт и «гражданский» выпуск (в пределах актуальных производственных возможностей, которые сокращаются из-за отвлечения ресурсов на военное производство).
@@ -66,6 +79,12 @@
             <hr/>
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/macro">Макроэкономика</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/dfi'>Прямые иностранные инвестиции — зачем?</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#macro'> Заметки о финансах/Макроэкономика, денежное обращение и механика рынков</a> &uarr; </span>
@@ -93,7 +112,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
