--- a/pages/sources.html
+++ b/pages/sources.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." />        <meta name="keywords" content="банки, карты, вклады, кэшбэк, надёжность, отчётность компаний, дивиденды, макроэкономика, статистика, личные финансы, инвестиции" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/pages/sources" /></head>
+<meta property="og:url" content="https://onfin.github.io/pages/sources" />
+</head>
 
 <body>
     <header>
@@ -79,6 +80,7 @@
 <li><a href="https://journal.tinkoff.ru/shepelev/">Статьи Евгения Шепелева в Тинькоф-Журнале</a>. Преимущественно подробные ответы на распространённые вопросы новичков.</li>
 <li><a href="http://arsagera.ru/kuda_i_kak_investirovat/">«Заметки в инвестировании» Арсагеры</a> и их <a href="https://arsagera.ru/course/">Курс лекций</a>. Арсагера — компания, занимающаяся <em>активным</em> инвестированием, поэтому несколько искажает сложившийся научный консенсус в свою сторону. Однако, её материалы остаются одним из лучших русскоязычных источников для тех, кто склонен строить свою картину мира «снизу вверх» — от механики работы отдельных компаний и взаимодействия участников рынка к общим закономерностям его функционирования.</li>
 <li><a href="https://artem-bakulin.github.io/latex/papers/index-investing/">Брошюра по портфельному инвестированию от Артёма Бакулина</a> добротно излагает математический фундамент портфельного инвестирования.</li>
+<li><a href="https://www.core-econ.org/">CORE Econ</a></li>
 </ul>
 </section>
 <section id="_3">
@@ -168,6 +170,7 @@
 <li><a href="https://www.msci.com/end-of-day-data-search">Индексы MSCI</a></li>
 <li><a href="https://stooq.com/">stooq</a> — беспрецедентно длинные ценовые ряды по основным активам и индексам.</li>
 <li><a href="https://investoramnesia.com/historical-data/">Investor Amnesia Data Library</a> — разнообразные исторические данные по финансовым рынкам</li>
+<li><a href="https://wid.world/">World Inequality Database</a></li>
 </ul>
 </section>
 </section>
@@ -387,7 +390,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
     </p>
 </div>    </footer></body>
 </html>
