--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2024-01-13</span>
+                <a href="https://onfin.github.io/notes/dfi">Прямые иностранные инвестиции — зачем?</a>
+                <p class=index-descr>(а) Заимствование передовых производственных и управленческих практик, (б) вовлечение в систему международных торговых связей, (в) стимулирование конкуренции, (г) сигнал отечественным инвесторам, (д) укрепление дипломатических связей, (е) диверсификация экономики и структуры трансграничных платежей.</p>
+            </li>
+            <li>
                 <span>2023-03-04</span>
                 <a href="https://onfin.github.io/literacy/brokers">Обновлено: Как выбрать брокера</a>
                 <p class=index-descr>Усилил отрицание инвестирования в зарубежные рынки через российскую инфраструктуру.</p>
@@ -630,7 +635,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer>
 </body>
