--- a/notes/mpt/index.html
+++ b/notes/mpt/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще." />        <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, диверсификация, ребалансировка, эффективная граница, efficient frontier, портфель, риск, доходность, классы активов, бонус от ребалансировки, теория портфеля" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/mpt" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/mpt" />
+</head>
 
 <body>
     <header>
@@ -364,7 +365,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
