--- a/notes/piketti.html
+++ b/notes/piketti.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Очень простое математическое опровержение основной идеи «Капитала в XXI веке», что превышение доходности капитала над скоростью роста экономики является причиной роста социального неравенства." />        <meta name="keywords" content="финансовая грамотность, Тома Пикетти, Капитал в XXI веке, опровержение, математика, дифференциальные уравнения" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/piketti" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/piketti" />
+</head>
 
 <body>
     <header>
@@ -46,6 +47,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
+                        <li><a href='/notes/property_taxes'>Имущественные налоги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Имущественные налоги</span>
+        <span class='description'>Практическая реализация эффективного налогообложения имущества — проблемна, и скорее всего приведёт к бегству капитала, снижению предпринимательской активности, и увеличению социального неравенства, вопреки изначальной идее. Тем не менее, в отдельных узкоспециальных случаях имущественные налоги могут быть полезны. Морально-этические и концептуальные вопросы имущественных налогов (и права собственности вообще) в заметке не рассматриваются и не должны обсуждаться в комментариях к ней: только механика налогообложения и его последствий.</span>
+    </span></li>
                         <li><a href='/notes/piketti2'>Социальное неравенство и налоги</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
@@ -115,7 +123,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
