--- a/notes/piketti2/index.html
+++ b/notes/piketti2/index.html
@@ -47,6 +47,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
+                        <li><a href='/notes/property_taxes'>Имущественные налоги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Имущественные налоги</span>
+        <span class='description'>Практическая реализация эффективного налогообложения имущества — проблемна, и скорее всего приведёт к бегству капитала, снижению предпринимательской активности, и увеличению социального неравенства, вопреки изначальной идее. Тем не менее, в отдельных узкоспециальных случаях имущественные налоги могут быть полезны. Морально-этические и концептуальные вопросы имущественных налогов (и права собственности вообще) в заметке не рассматриваются и не должны обсуждаться в комментариях к ней: только механика налогообложения и его последствий.</span>
+    </span></li>
                         <li><a href='/notes/freemarket'>Рыночек не порешает</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
@@ -89,6 +96,12 @@
                     Категории:<a href="/categories/macro">Макроэкономика</a>
 <a href="/categories/math">Математика</a>
                     </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/property_taxes'>Имущественные налоги</a></li>
+                        </ul>
+                    </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#etudes'> Заметки о финансах/Экономические этюды</a> &uarr; </span>
                     </div>
@@ -115,7 +128,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2022.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
