--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2024-02-05</span>
+                <a href="https://onfin.github.io/notes/property_taxes">Имущественные налоги</a>
+                <p class=index-descr>Практическая реализация эффективного налогообложения имущества — проблемна, и скорее всего приведёт к бегству капитала, снижению предпринимательской активности, и увеличению социального неравенства, вопреки изначальной идее. Тем не менее, в отдельных узкоспециальных случаях имущественные налоги могут быть полезны. Морально-этические и концептуальные вопросы имущественных налогов (и права собственности вообще) в заметке не рассматриваются и не должны обсуждаться в комментариях к ней: только механика налогообложения и его последствий.</p>
+            </li>
+            <li>
                 <span>2024-01-13</span>
                 <a href="https://onfin.github.io/notes/dfi">Прямые иностранные инвестиции — зачем?</a>
                 <p class=index-descr>(а) Заимствование передовых производственных и управленческих практик, (б) вовлечение в систему международных торговых связей, (в) стимулирование конкуренции, (г) сигнал отечественным инвесторам, (д) укрепление дипломатических связей, (е) диверсификация экономики и структуры трансграничных платежей.</p>
