--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." />        <meta name="keywords" content="финансовая грамотность, ценные бумаги, портфель, фондовый рынок, цена акции, рыночная доходность, фондовый индекс" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/marketprice" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/marketprice" />
+</head>
 
 <body>
     <header>
@@ -116,7 +117,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
