--- a/notes/rebalance_bonus/index.html
+++ b/notes/rebalance_bonus/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Получаем выражение для величины бонуса за ребалансировку, и заодно понимаем, что бонуса как такового не существует, просто нелинейные зависимости — нелинейны. Аналогичное быстро проделываем с «потерями на волатильности», которые и вовсе порождены использованием неправильного представления доходностей." />        <meta name="keywords" content="риск, доходность, портфельная теория, портфельный эффект, бонус за ребалансировку, потери на волатильности, volatility drag, volatility tax" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/rebalance_bonus" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/rebalance_bonus" />
+</head>
 
 <body>
     <header>
@@ -46,6 +47,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
+                        <li><a href='/notes/rebalance_bonus_2'>Бонус за не-ребалансировку (физмат-этюд)</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Бонус за не-ребалансировку (физмат-этюд)</span>
+        <span class='description'>Оцениваем ожидаемую доходность портфеля без ребалансировки и условия, при которых периодическая ребалансировка выгоднее отсутствия оной.</span>
+    </span></li>
                         <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a>    <button class='link-meta-anchor'>
             <strong>i</strong>
     </button>
@@ -110,6 +118,12 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
                     Категории:<a href="/categories/math">Математика</a>
 <a href="/categories/portfolio">Портфель</a>
                     </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/rebalance_bonus_2'>Бонус за не-ребалансировку (физмат-этюд)</a></li>
+                        </ul>
+                    </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
                     </div>
@@ -136,7 +150,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
