--- a/notes/accounting.html
+++ b/notes/accounting.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Причины (мои собственные) вести учёт личных финансов и контролировать расходы. Как это делаю я и почему." />        <meta name="keywords" content="финансовая грамотность, личные финансы, учёт и контроль, финансовая дисциплина" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/accounting" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/accounting" />
+</head>
 
 <body>
     <header>
@@ -50,14 +51,14 @@
 </div>
 <p>Так как потребности у меня скромные, и переплачивать ни за что не склонен, проблем с несходящимся бюджетом не возникает. Зачем же тогда учёт?</p>
 <p>Первая причина — так исторически сложилось: бюджет не всегда сходился. В 2015-м, когда всё это началось, потребность в учёте, причём ежедневном и до последнего рубля, была настоятельная: 15Кр/мес кредита при окладе в 20Кр (плюс сколько-то премий-грантов, сколько-то от it-проектов, которые тогда только начинались: всего очень немного и нерегулярно). Тогда я (немного поиграв с <a href="https://www.ledger-cli.org/">Ledger</a> и <a href="http://furius.ca/beancount/">beancount</a>) написал скрипт, который читает текстовый файл такого вида</p>
-<div class="codehilite"><pre><span></span>2015-04-28:
- + -&gt; :im :dcard 11282.75
- + -&gt; :dcard :sb-dep 11000
- + -&gt; :dcard :cash 1400
- + -&gt; :ccard :food 25
- + -&gt; :ccard :food 28.8
- + -&gt; :ccard :velo 130
-</pre></div>
+<div class="codehilite"><pre><span></span><code><span class="mf">2015</span><span class="o">-</span><span class="mf">04</span><span class="o">-</span><span class="mf">28</span><span class="p">:</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">im</span><span class="w"> </span><span class="p">:</span><span class="n">dcard</span><span class="w"> </span><span class="mf">11282.75</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">dcard</span><span class="w"> </span><span class="p">:</span><span class="n">sb</span><span class="o">-</span><span class="n">dep</span><span class="w"> </span><span class="mf">11000</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">dcard</span><span class="w"> </span><span class="p">:</span><span class="n">cash</span><span class="w"> </span><span class="mf">1400</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">ccard</span><span class="w"> </span><span class="p">:</span><span class="n">food</span><span class="w"> </span><span class="mf">25</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">ccard</span><span class="w"> </span><span class="p">:</span><span class="n">food</span><span class="w"> </span><span class="mf">28.8</span><span class="w"></span>
+<span class="w"> </span><span class="o">+</span><span class="w"> </span><span class="o">-&gt;</span><span class="w"> </span><span class="p">:</span><span class="n">ccard</span><span class="w"> </span><span class="p">:</span><span class="n">velo</span><span class="w"> </span><span class="mf">130</span><span class="w"></span>
+</code></pre></div>
 
 <p>и выдаёт в виде отчёта остатки на счетах и обороты по счетам за заданный период времени. В таком виде оно работает до сих пор (хотя три раза переписывалось).</p>
 <p>В то время с каждой категорией расходов была связана статья бюджета: расход списывался как с «физического» счёта, так и с «бюджетного». Бюджетные счета пополнялись 1-го числа каждого месяца. Если такой счёт подходил к концу — значит надо экономить, или забирать деньги с других статей. В середине 2017-го года я перестал вести бюджет, а с начала 2018-го начал заносить сведения о расходах в конце месяца, переписывая статистику из интернет-банков (а наличные расходы я записываю в телефон сразу при их совершении).</p>
@@ -123,7 +124,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
