--- a/notes/money_is_abstraction.html
+++ b/notes/money_is_abstraction.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Универсальность денег и их эквивалентность экономическим благам — не абсолютны. Если не обращать внимания на ресурсы, перераспределяемые с помощью денег, то очень часто можно сильно ошибиться в рассуждениях." />        <meta name="keywords" content="экономика, макроэкономика, деньги, импорт, экспорт, ВВП, поток ресурсов, внешний долг" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/money_is_abstraction" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/money_is_abstraction" />
+</head>
 
 <body>
     <header>
@@ -149,7 +150,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
