--- a/notes/paingain/index.html
+++ b/notes/paingain/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Определяем оптимальную экспозицию на актив/портфель с помощью функции полезности (и «функции болезненности»). Это нам впоследствии поможет и при составлении оптимальных портфелей." />        <meta name="keywords" content="экспозиция, риск, доходность, портфельная теория, волатильность, полезность" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/paingain" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/paingain" />
+</head>
 
 <body>
     <header>
@@ -160,7 +161,7 @@
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
