--- a/notes/volatility2/index.html
+++ b/notes/volatility2/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/png" href="/images/favicon.png"/>        <meta name="description" content="Проанализировал целых 10 возможных мер рыночного риска, и собрал их в 3 основных его аспекта, которые должны учитываться при определении терпимости к риску и построении оптимального портфеля." />        <meta name="keywords" content="финансовая математика, волатильность, стандартное отклонение, риск, просадка, Шарп, Сортино, автокорреляция, последовательность исходов, downside risk" />
 <meta property="og:locale" content="ru" />    <meta property="og:type" content="website" /><meta property="og:title" content="" />
-<meta property="og:url" content="https://onfin.github.io/notes/volatility2" /></head>
+<meta property="og:url" content="https://onfin.github.io/notes/volatility2" />
+</head>
 
 <body>
     <header>
@@ -342,7 +343,7 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
     <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ. Хуже того, способов гарантированно сохранить свой капитал тоже НЕ СУЩЕСТВУЕТ.</p>
 
     <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
-    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2021.
+    <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2024.
     </p>
 </div>    </footer></body>
 </html>
