--- a/notes/rebalance_bonus_2.html
+++ b/notes/rebalance_bonus_2.html
@@ -44,6 +44,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/rebalance_bonus_3'>Ребалансировка между активами с неопределённой будущей доходностью (физмат-этюд)</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Ребалансировка между активами с неопределённой будущей доходностью (физмат-этюд)</span>
+        <span class='description'>Ребалансировка должна восприниматься исключительно как механизм контроля _рисков_ портфеля. И этот механизм — не бесплатный. В реальных сценариях оказывается крайне маловероятным, чтобы портфель с ребалансировкой принес бо́льшую доходность, чем без неё. Бесплатных обедов не существует. Другое дело, что, пожертвовав частью «ненужной» доходности, мы можем приобрести значительное снижение волатильности портфеля, и даже получить бо́льшую доходность на целевой уровень его волатильности / неопределённости итоговых результатов.</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p><a href="/notes/rebalance_bonus">Бонус за ребалансировку</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
@@ -86,6 +98,12 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/math">Математика</a>
 <a href="/categories/portfolio">Портфель</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/rebalance_bonus_3'>Ребалансировка между активами с неопределённой будущей доходностью (физмат-этюд)</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
