--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2024-10-15</span>
+                <a href="https://onfin.github.io/notes/rebalance_bonus_3">Ребалансировка между активами с неопределённой будущей доходностью (физмат-этюд)</a>
+                <p class=index-descr>Ребалансировка должна восприниматься исключительно как механизм контроля _рисков_ портфеля. И этот механизм — не бесплатный. В реальных сценариях оказывается крайне маловероятным, чтобы портфель с ребалансировкой принес бо́льшую доходность, чем без неё. Бесплатных обедов не существует. Другое дело, что, пожертвовав частью «ненужной» доходности, мы можем приобрести значительное снижение волатильности портфеля, и даже получить бо́льшую доходность на целевой уровень его волатильности / неопределённости итоговых результатов.</p>
+            </li>
+            <li>
                 <span>2024-10-05</span>
                 <a href="https://onfin.github.io/notes/rebalance_bonus_2">Бонус за не-ребалансировку (физмат-этюд)</a>
                 <p class=index-descr>Оцениваем ожидаемую доходность портфеля без ребалансировки и условия, при которых периодическая ребалансировка выгоднее отсутствия оной.</p>
