--- a/notes/no_fair_price/index.html
+++ b/notes/no_fair_price/index.html
@@ -48,6 +48,18 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/capweighting_drag'>О доходности взвешенных по капитализации портфелей в условиях зашумлённых рыночных цен (физмат-этюд)</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О доходности взвешенных по капитализации портфелей в условиях зашумлённых рыночных цен (физмат-этюд)</span>
+        <span class='description'>Предложение: в портфеле, взвешивающем компании по капитализации, переоценённые компании автоматически получают больший вес, а недооценённые — меньший ⇒ его доходность будет ниже, чем если бы компании были взвешены «справедливо». Расчёт: ничего подобного.</span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Под справедливой ценой акции как правило понимается <a href="/literacy/discounting">дисконтированная</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
