--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2024-12-28</span>
+                <a href="https://onfin.github.io/notes/capweighting_drag">О доходности взвешенных по капитализации портфелей в условиях зашумлённых рыночных цен (физмат-этюд)</a>
+                <p class=index-descr>Предложение: в портфеле, взвешивающем компании по капитализации, переоценённые компании автоматически получают больший вес, а недооценённые — меньший ⇒ его доходность будет ниже, чем если бы компании были взвешены «справедливо». Расчёт: ничего подобного.</p>
+            </li>
+            <li>
                 <span>2024-10-15</span>
                 <a href="https://onfin.github.io/notes/rebalance_bonus_3">Ребалансировка между активами с неопределённой будущей доходностью (физмат-этюд)</a>
                 <p class=index-descr>Ребалансировка должна восприниматься исключительно как механизм контроля _рисков_ портфеля. И этот механизм — не бесплатный. В реальных сценариях оказывается крайне маловероятным, чтобы портфель с ребалансировкой принес бо́льшую доходность, чем без неё. Бесплатных обедов не существует. Другое дело, что, пожертвовав частью «ненужной» доходности, мы можем приобрести значительное снижение волатильности портфеля, и даже получить бо́льшую доходность на целевой уровень его волатильности / неопределённости итоговых результатов.</p>
