--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,11 @@
 
         <ul>
             <li>
+                <span>2025-01-19</span>
+                <a href="https://onfin.github.io/notes/freemarket_proof">Эффективность рыночной экономики: упрощённое доказательство</a>
+                <p class=index-descr>Очень сжато, скучно и упрощённо о том, что, при соблюдении ряда условий, (а) рыночное равновесие соответствует парето-оптимальному распределению благ, (б) существует и (в) достижимо.</p>
+            </li>
+            <li>
                 <span>2024-12-28</span>
                 <a href="https://onfin.github.io/notes/capweighting_drag">О доходности взвешенных по капитализации портфелей в условиях зашумлённых рыночных цен (физмат-этюд)</a>
                 <p class=index-descr>Предложение: в портфеле, взвешивающем компании по капитализации, переоценённые компании автоматически получают больший вес, а недооценённые — меньший ⇒ его доходность будет ниже, чем если бы компании были взвешены «справедливо». Расчёт: ничего подобного.</p>
